Avoid warning about native access with jdk >= 23